fix the overlapping words

--- a/pay/pay.css
+++ b/pay/pay.css
@@ -407,5 +407,7 @@ a:hover {
 
 /* ------------------------------------- */
 
-
+.float-right {
+  float: right!important;
+}
 
